Remove old auth method
